<resources>
    <string name="app_name">Desafio3DHA</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="e_mail">E-mail</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>

    <string name="sinopse">The greatest superhero of all time RETURNS! The world may have changed
        since Spidey\'s been gone, but so has Peter Parker. This is a man with a second chance at
        life, and he\'s not wasting a moment of it. Same Parker Luck, new Parker attitude.
        Putting the \"friendly\" back in the neighborhood, the \"hero\" back into \"super hero,\" and
        the \"amazing\" back into "Spider-Man! Also returning The recharged and reenergized ELECTRO!</string>
    <string name="pages">Pages:</string>
    <string name="price">Price:</string>
    <string name="published">Published:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cover_thumbnail">Cover thumbnail</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="back_button">Back button</string>
    <string name="comic_cover">Comic cover</string>
    <string name="close">close</string>
    <string name="marvel_logo">Marvel logo</string>
</resources>